--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           # Your image name
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/car-price-app
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/car-price-app:a3
           tags: type=semver,pattern={{raw}}
 
       - name: Build and push
