--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           # Your image name
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/car-price-app:a3
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/car_price_app
           tags: type=semver,pattern={{raw}}
 
       - name: Build and push
@@ -75,7 +75,7 @@ jobs:
           context: ./app
           file: ./app/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/car-price-app:a3
+          tags: ${{ steps.meta.outputs.tags }}
     
   deploy:
     needs: build-test
